# Graphics-Engine

./: .gitmodules  CMakeLists.txt  TODO.md
Headers/: Camera.h  Framebuffer.h  GraphicsEngine.h  Input.h  Mesh.h  Model.h  Shader.h  Texture.h  Timer.h  Window.h  utils.h
Resource/models/: cube.glb  plane.glb
Resource/shaders/: 3d_frag.glsl  3d_vert.glsl  flat_frag.glsl  fragment.glsl  vertex.glsl
Source/: Camera.cpp  Framebuffer.cpp  Input.cpp  Main.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  Timer.cpp  Window.cpp  utils.cpp
